objects/IntelliMail__Recipient__c.object
<CustomObject>
    <description>Individuals who are going to receive IntelliMail reports</description>
    <fields>
        <fullName>IntelliMail__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Use this to enable/disable reports being sent to this specific recipient</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntelliMail__Email__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Email address of the recipient</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IntelliMail__Recipient_Domain__c</fullName>
        <description>Identifies the Domain name for the email address of the Recipient</description>
        <formula>RIGHT( IntelliMail__Email__c ,  LEN(IntelliMail__Email__c)- FIND(&quot;@&quot;, IntelliMail__Email__c , 1)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Domain</label>
        <type>Text</type>
    </fields>
    <label>Recipient</label>
    <listViews>
        <fullName>IntelliMail__All</fullName>
        <columns>NAME</columns>
        <columns>IntelliMail__Active__c</columns>
        <columns>IntelliMail__Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>R{0000000}</displayFormat>
        <label>Recipient</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>